# DOA

./: README.md
LectureCode/Week_02/: runtimeTest.cpp
LectureCode/Week_02/insertionsort/: insertionsort.cpp  insertionsorttesting.cpp
LectureCode/Week_03/queue/: queue_class.h  test_queue_class.cpp
LectureCode/Week_05/sum/: Makefile  StopwatchGeneric.h  rec.cpp.org  rec_simple  test  test.cpp  test.cpp.vis
LectureCode/Week_05/sumTail/: Makefile  tasks.json  test  test.cpp
LectureCode/Week_05/sum_project/: sum_project.sln  sum_project.vcxproj  test  test.cpp
LectureCode/Week_07/: README.md
LectureCode/Week_07/2_Priority_queue/: Makefile  binary_heap.h  binary_heap.tpp  main.cpp
LectureCode/Week_07/6_Set/: binary_search_tree.h  binary_search_tree.tpp  binary_search_tree_itr.h  compile_commands.json  set.h  test
LectureCode/Week_07/7_AVL/: Makefile  avl_tree.h  avl_tree.tpp  test_avl_tree.cpp
LectureCode/Week_08/: CMakeLists.txt  avlTesting  avl_test_from_slides.cpp  avl_tree.h  binTreeTest  test_binary_search_tree.cpp
LectureCode/Week_13/: CMakeLists.txt
LectureCode/Week_13/exercise2/: Makefile  exercise2  exercise2.cpp  exercise2.d
LectureCode/Week_13/exercise4/: Makefile  SkipList.h  main.cpp
TidligereEksamener/EksamenF22re/: CMakeLists.txt  main.cpp
TidligereEksamener/EksamenS23re/: CMakeLists.txt  binary_heap.h  main.cpp
TidligereEksamener/EksamenV22/: CMakeLists.txt  main.cpp
TidligereEksamener/EksamenV23/: CMakeLists.txt  main.cpp
TidligereEksamener/EksamenV24/: CMakeLists.txt  double_list.h  double_list.tpp  main.cpp
(+1 files in other folders)
